--- a/index.html
+++ b/index.html
@@ -1,323 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aarthi Oil and Gas Exploration Services</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aarthi Oil and Gas Services</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <img src="images/logo.png" alt="Aarthi Oil and Gas Exploration Services Logo">
-            </div>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
+  <header>
+    <div class="container topbar">
+      <div class="brand">
+        <img src="logo.png" alt="Aarthi Oil and Gas Services Logo" class="logo-img" />
+        <div class="tagline">Seismic Acquisition • Processing • Interpretation</div>
         </div>
-    </header>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact-info" class="cta">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Quality Seismic Data Acquisition Services</h1>
-                <li>Seismic Data Acquisition</li>
-                <li>Seismic Data Processing  & Interpretation</li>
-                <li>Shot Hole Drilling</li>
-                <li>Topography Survey</li>
-                <a href="#contact" class="btn btn-primary">Get in Touch</a>
-            </div>
+  <main>
+    <section class="hero">
+      <div class="container hero-grid">
+        <div class="hero-left">
+          <h2>Reliable Land Seismic Services <span>Across India</span></h2>
+          <p>We specialize in 2D/3D seismic acquisition, field processing and interpretation — delivering accurate subsurface data.</p>
+          <div class="hero-cards">
+            <div class="hc">2D &amp; 3D Acquisition</div>
+            <div class="hc">On-site Processing</div>
+            <div class="hc">Geophysical Interpretation</div>
+          </div>
         </div>
+        <div class="hero-right" id="contact">
+          <h3>Request a Quote</h3>
+          <form id="quoteForm">
+            <div class="field-row">
+              <input type="text" id="name" placeholder="Full name" required />
+              <input type="tel" id="phone" placeholder="Phone" required />
+            </div>
+            <input type="email" id="email" placeholder="Email" required />
+            <textarea id="message" rows="4" placeholder="Project details (optional)"></textarea>
+            <button type="button" class="primary" onclick="submitForm()">Send Request</button>
+          </form>
+        </div>
+      </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="section-header">
-                <h2>About Us</h2>
-                <p>Learn more about Aarthi Oil and Gas Exploration Services</p>
-            </div>
-            <div class="about-content">
-                <div class="about-text">
-                    <h3>Who We Are</h3>
-                    <p>Aarthi Oil and Gas Exploration Services is a leading geotechnical engineering firm with extensive experience in soil investigation, foundation design, and geotechnical consulting. We provide comprehensive solutions for construction projects of all sizes.</p>
-                    
-                    <h3>Our Mission</h3>
-                    <p>To deliver high-quality geotechnical services that ensure the safety, stability, and sustainability of construction projects while exceeding client expectations.</p>
-                    
-                    <h3>Our Vision</h3>
-                    <p>To be the most trusted name in geotechnical engineering, known for technical excellence, innovation, and client satisfaction.</p>
-                </div>
-                <div class="about-image">
-                    <img src="images/about-image.jpg" alt="Geotechnical Engineering Team">
-                </div>
-            </div>
-        </div>
+    <section id="about" class="about container">
+      <h2>About Aarthi Oil and Gas Services</h2>
+      <p>Aarthi Oil and Gas Services provides end-to-end land seismic services: planning, acquisition, field processing and interpretation. Our teams are experienced in diverse terrains and use best-in-class instrumentation to ensure data quality.</p>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <div class="section-header">
-                <h2>Our Services</h2>
-                <p>Comprehensive geotechnical solutions</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-search"></i>
-                    </div>
-                    <h3>Soil Investigation</h3>
-                    <p>We provide seismic data to our clients after collection of the data with the help different best recording system and energy resources as per requirement of terrain.
-                        <b>The scope of Seismic Data Acquisition Services:
-                        <ul>
-                        <li>Onshore Seismic and Transition Zone</li>
-                        <li>2D Seismic Surveys</li>
-                        <li>Large-scale 3D Seismic Campaigns</li>
-                        <li>High-Resolution Seismic Studies</li>
-                        <li>Aspects of Seismic Operations Provided:</li>
-                        <li>Survey Design & Pre-Planning</li>
-                        <li>Pre-Permitting & Permitting</li>
-                        <li>GIS & Surveying</li>
-                        <li>Quality Control & In-field Processing</li></ul></b></p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-building"></i>
-                    </div>
-                    <h3>Foundation Design</h3>
-                    <p>Expert foundation design services for buildings, bridges, and other structures.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-mountain"></i>
-                    </div>
-                    <h3>Slope Stability Analysis</h3>
-                    <p>Assessment and solutions for natural and man-made slopes to prevent failures.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-water"></i>
-                    </div>
-                    <h3>Groundwater Studies</h3>
-                    <p>Investigation and management of groundwater conditions for construction projects.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-road"></i>
-                    </div>
-                    <h3>Pavement Design</h3>
-                    <p>Design of durable and cost-effective pavements for roads and highways.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-hard-hat"></i>
-                    </div>
-                    <h3>Construction Monitoring</h3>
-                    <p>On-site monitoring and quality control during construction phases.</p>
-                </div>
-            </div>
+    <section id="services" class="services container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="svc">
+          <h3>Land Seismic Acquisition</h3>
+          <p>Full-stack acquisition using modern vibrators, recording systems and optimized receiver layouts.</p>
         </div>
+        <div class="svc">
+          <h3>Field Processing</h3>
+          <p>On-site QC and processing, noise attenuation, deconvolution and stacking to deliver superior images.</p>
+        </div>
+        <div class="svc">
+          <h3>Data Interpretation</h3>
+          <p>Seismic interpretation and subsurface modeling combining geophysicists and geologists.</p>
+        </div>
+        <div class="svc">
+          <h3>Consulting &amp; Support</h3>
+          <p>Project planning, permitting support and post-survey analytics to maximize project value.</p>
+        </div>
+      </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <div class="section-header">
-                <h2>Our Projects</h2>
-                <p>A showcase of our successful projects</p>
-            </div>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/project1.jpg" alt="Commercial Building Project">
-                    </div>
-                    <div class="project-info">
-                        <h3>Commercial Complex</h3>
-                        <p>Foundation design and soil investigation for a 20-story commercial complex.</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/project2.jpg" alt="Highway Project">
-                    </div>
-                    <div class="project-info">
-                        <h3>Highway Development</h3>
-                        <p>Geotechnical investigation and pavement design for a 50km highway project.</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/project3.jpg" alt="Bridge Project">
-                    </div>
-                    <div class="project-info">
-                        <h3>Bridge Construction</h3>
-                        <p>Foundation analysis and design for a major river crossing bridge.</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/project4.jpg" alt="Residential Project">
-                    </div>
-                    <div class="project-info">
-                        <h3>Residential Township</h3>
-                        <p>Comprehensive geotechnical services for a large residential development.</p>
-                    </div>
-                </div>
-            </div>
+    <section id="projects" class="projects container">
+      <h2>Recent Projects</h2>
+      <div class="carousel" id="carousel">
+        <div class="proj">
+          <h4>Onshore Seismic — Tamil Nadu</h4>
+          <p>Acquired 3D blocks using multi-source layout and delivered processed stacks and velocity analysis.</p>
         </div>
+        <div class="proj">
+          <h4>Geophysical Survey — Andhra</h4>
+          <p>Integrated near-surface surveys for site characterization and shallow mapping.</p>
+        </div>
+        <div class="proj">
+          <h4>Data Reprocessing</h4>
+          <p>Reprocessing legacy surveys to new imaging standards and updated velocity models.</p>
+        </div>
+      </div>
     </section>
+  </main>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-        <div class="container">
-            <div class="section-header">
-                <h2>Client Testimonials</h2>
-                <p>What our clients say about us</p>
-            </div>
-            <div class="testimonial-slider">
-                <div class="testimonial">
-                    <div class="testimonial-text">
-                        <p>"Aarthi Oil and Gas Exploration ServicesAarthi Geotech provided exceptional geotechnical services for our commercial project. Their expertise and attention to detail saved us time and money."</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <h4>Rajesh Kumar</h4>
-                        <p>Project Manager, ABC Constructions</p>
-                    </div>
-                </div>
-                <div class="testimonial">
-                    <div class="testimonial-text">
-                        <p>"We've worked with Aarthi Oil and Gas Exploration Services on multiple projects, and they consistently deliver high-quality results. Their team is professional, knowledgeable, and responsive."</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <h4>Priya Sharma</h4>
-                        <p>Director, XYZ Developers</p>
-                    </div>
-                </div>
-                <div class="testimonial">
-                    <div class="testimonial-text">
-                        <p>"The foundation recommendations provided by Aarthi Oil and Gas Exploration Services were spot-on. They helped us navigate challenging soil conditions with innovative solutions."</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <h4>Suresh Patel</h4>
-                        <p>Chief Engineer, PQR Infrastructure</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+  <footer>
+  <div class="container footer-grid">
+    <div>
+      <strong>Aarthi Oil and Gas Services</strong>
+      <p>End-to-end land seismic acquisition and geophysical services across India.</p>
+    </div>
+    <div class="contact-info" id="contact-info">
+      <p><strong>Address:</strong> D. No. 1/231, High School Road, Karichipalayam, Kolaram Village, Namakkal, Tamil Nadu, India, 637201</p>
+      <p><strong>Email:</strong> <a href="mailto:npswamy33@aarthioilandgas.com">info@aarthigeotech.com</a></p>
+      <p><strong>Phone:</strong> +91 94437 33233</p>
+    </div>
+  </div>
+</footer>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="section-header">
-                <h2>Contact Us</h2>
-                <p>Get in touch with our team</p>
-            </div>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-                        <div class="text">
-                            <h3>Address</h3>
-                            <p>D. No. 1/231, High School Road,, Karichipalayam, Kolaram Village, Namakkal, Namakkal, Tamil Nadu, India, 637201</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="icon"><i class="fas fa-phone"></i></div>
-                        <div class="text">
-                            <h3>Phone</h3>
-                            <p>+91 9443733233</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="icon"><i class="fas fa-envelope"></i></div>
-                        <div class="text">
-                            <h3>Email</h3>
-                            <p>npswamy33@aarthigeotech.com</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="contact-form">
-                    <form id="contactForm">
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" id="subject" name="subject" placeholder="Subject" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="images/logo.png" alt="Aarthi Oil and Gas Exploration Services Logo">
-                    <p>Quality Seismic Data Acquisition Services</p>
-                </div>
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-services">
-                    <h3>Our Services</h3>
-                    <ul>
-                        <li>Seismic Data Acquisition</li>
-                        <li>Foundation Design</li>
-                        <li>Slope Stability Analysis</li>
-                        <li>Groundwater Studies</li>
-                        <li>Pavement Design</li>
-                    </ul>
-                </div>
-                <div class="footer-social">
-                    <h3>Connect With Us</h3>
-                    <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Aarthi Oil and Gas Exploration Services. All Rights Reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
