--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 </head>
 <body>
   <header>
-    <div class="container topbar">
-      <div class="brand">
-        <img src="logo.png" alt="Aarthi Oil and Gas Services Logo" class="logo-img" />
-        <div class="tagline">Seismic Acquisition • Processing • Interpretation</div>
-        </div>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact-info" class="cta">Contact</a>
-      </nav>
+  <div class="container topbar">
+    <div class="brand">
+      <img src="logo.png" alt="Aarthi Oil and Gas Services Logo" class="logo-img" />
+      <div class="tagline">Seismic Acquisition • Processing • Interpretation</div>
     </div>
-  </header>
+
+    <!-- Hamburger appears only on mobile -->
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact-info" class="cta">Contact</a>
+    </nav>
+  </div>
+</header>
 
   <main>
     <section class="hero">
