--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aarthi Oil and Gas Exploration ServicesServices — Land Seismic Experts</title>
+  <title>Aarthi Oil And Gas Exploration Services Private Limited — Seismic • Processing • Interpretation</title>
   <meta name="description" content="Land seismic acquisition, processing, and interpretation services across India. Reliable, safe, and data-driven field operations." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -408,7 +408,7 @@
       <div class="brand">
         <img src="logo1.png" alt="Aarthi Geo Services Logo" class="logo" />
         <div>
-          <div class="title">Aarthi Oil and Gas Exploration ServicesServices</div>
+          <div class="title">Aarthi Oil And Gas Exploration Services Private Limited</div>
           <div class="sub">Seismic • Processing • Interpretation</div>
         </div>
       </div>
@@ -750,7 +750,7 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-            title="Aarthi Oil and Gas Exploration ServicesServices Location">
+            title="Aarthi Oil And Gas Exploration Services Private Limited">
           </iframe>
         </div>
       </div>
@@ -764,8 +764,8 @@
         <div class="brand" style="margin-bottom:10px">
           <img src="logo1.png" alt="Aarthi Geo Services Logo" class="logo" />
           <div>
-            <div class="title">Aarthi Oil and Gas Exploration ServicesServices</div>
-            <div class="sub">Land Seismic Specialists</div>
+            <div class="title">Aarthi Oil And Gas Exploration Services Private Limited</div>
+            <div class="sub">Seismic • Processing • Interpretation</div>
           </div>
         </div>
         <p class="muted">Reliable acquisition and processing for energy projects across India. Safety‑first, data‑driven, on schedule.</p>
@@ -788,7 +788,7 @@
         </ul>
       </div>
     </div>
-    <div class="container copyright">© <span id="year"></span> Aarthi Oil and Gas Exploration ServicesServices. All rights reserved.</div>
+    <div class="container copyright">© <span id="year"></span> Aarthi Oil And Gas Exploration Services Private Limited. All rights reserved.</div>
     
     <style>
       .footer-nav, .contact-list {
