--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <img src="logo1.png" alt="Aarthi Geo Services Logo" class="logo" />
+        <img src="AOG_LOGO.png" alt="Aarthi Geo Services Logo" class="logo" />
         <div>
           <div class="title">Aarthi Oil And Gas Exploration Services Private Limited</div>
           <div class="sub">Seismic • Processing • Interpretation</div>
@@ -304,7 +304,7 @@
     <div class="container foot">
       <div class="footer-brand">
         <div class="brand" style="margin-bottom:10px">
-          <img src="logo1.png" alt="Aarthi Geo Services Logo" class="logo" />
+          <img src="AOG_LOGO.png" alt="Aarthi Geo Services Logo" class="logo" />
           <div>
             <div class="title">Aarthi Oil And Gas Exploration Services Private Limited</div>
             <div class="sub">Seismic • Processing • Interpretation</div>
