--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
         <div class="map-container">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.0307372333396!2d78.16699999999999!3d11.2275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTHCsDEzJzM5LjAiTiA3OMKwMTAnMDEuMiJF!5e0!3m2!1sen!2sin!4v1631234567890!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.8234567890123!2d77.9787358!3d11.2982351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTHCsDE3JzUzLjciTiA3N8KwNTgnNTIuNyJF!5e0!3m2!1sen!2sin!4v1631234567890!5m2!1sen!2sin"
             width="100%"
             height="350px"
             style="border:0;"
